# othello

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  arbre_blanc.txt  arbre_noir.txt  desktop.ini  othello.cbp  othello.depend  othello.layout  othello.pro  othello.pro.user.FF4635  run
docs/html/: alphabetaia_8h.html  alphabetaia_8h__dep__incl.map  alphabetaia_8h__dep__incl.md5  alphabetaia_8h__incl.map  alphabetaia_8h__incl.md5  alphabetaia_8h_source.html  annotated.html  classAlphaBetaIA-members.html  classAlphaBetaIA.html  classAlphaBetaIA__coll__graph.map  classAlphaBetaIA__coll__graph.md5  classAlphaBetaIA__inherit__graph.map  classAlphaBetaIA__inherit__graph.md5  classAlphaBetaIA_a864176d2e17750808299a6850f1396c3_icgraph.map  classAlphaBetaIA_a864176d2e17750808299a6850f1396c3_icgraph.md5  classConsole-members.html  classConsole.html  classGPion-members.html  classGPion.html  classGPion__coll__graph.map  classGPion__inherit__graph.md5  classIA-members.html  classIA.html  classIA__coll__graph.map  classIA__coll__graph.md5  classIA__inherit__graph.map  (+163 more)
qt/: fprincipale.cpp  fprincipale.h  jeu.cpp  jeu.h  main.cpp  othellier.cpp  othellier.h  othello.pro  pion.cpp  pion.h  threadia.cpp  threadia.h
src/: Coordonnees.cpp  Coordonnees.h  alphabetaia.cpp  alphabetaia.h  arbre.h  console.cpp  console.h  etat.cpp  etat.h  graphe.h  ia.cpp  ia.h  macros.h  main.cpp  memarbre.cpp  memarbre.h  memia.cpp  memia.h  menu.cpp  menu.h  minmax.h  minmaxia.cpp  minmaxia.h  negamaxia.cpp  negamaxia.h  noeud.h  pion.cpp  pion.h  plateau.cpp  plateau.h  randomia.cpp  randomia.h
(+172 files in other folders)
